# memguar

./: Cargo.toml  README.md
src/: advisor.rs  lib.rs  locker.rs  test.rs
src/file/: mapper.rs
src/wrappers/: advisor.rs  locker.rs
