[package]
name = "memguar"
authors = ["Yaroslav957"]
categories = ["memory-management"]
repository = "https://github.com/yaroslav957/memguar"
description = "A crate that helps to optimize IO of large buffers in near-OOM state or with small amount of RAM "
keywords = ["std", "memory", "swap", "libc", "unix"]
version = "0.0.1"
license = "MIT"
edition = "2021"

[dependencies.libc]
version = "0.2.155"
features = ["default"]
