[package]
name = "memguar"
version = "0.0.2"
edition = "2021"
description = "A crate that helps to optimize IO of large buffers in near-OOM state or with small amount of RAM"
authors = ["Yaroslav957"]
categories = ["memory-management"]
keywords = ["std", "memory", "swap", "libc", "unix"]
repository = "https://github.com/yaroslav957/memguar"
documentation = "https://crates.io/crates/memguar"
readme = "README.md"
license = "MIT"

[dependencies.libc]
version = "0.2.155"
default-features = true

[dependencies.tempfile]
version = "3.10.1"
default-features = true